feat: Detect EIP-1967 proxy pattern on unverified smart-contracts (#9864)
* Detect EIP-1967 proxy even for not verified smart-contracts

* put_verified_from_twin/2 function

* Implement proxy implementation model

* Fix test

* Fix DB migration

* Refactoring

* Fix tests

* Change schema to store implementation arrays

* Refactoring

* Update apps/explorer/lib/explorer/etherscan/contracts.ex

Co-authored-by: nikitosing <32202610+nikitosing@users.noreply.github.com>

* Process review comments

* Fix call of Implementation.get_implementation_address_hash

* Refactor save_implementation_data/5 to save_implementation_data/4

* Process review comment

* Remove duplicate call of implementation_updated_at

* Eliminate metadata_from_verified_bytecode_twin from save_implementation_data function

* Fix formatting

* Set non-nil smart-contract into Implementation.get_implementation_address_hash(...)

* Simplify clauses in save_implementation_data/3

* Get implementation data in a single DB request

* Fix tests

* Set different proxy verification success message in case of single/plural implementations

* Refactoring

---------

Co-authored-by: nikitosing <32202610+nikitosing@users.noreply.github.com>

--- a/apps/block_scout_web/lib/block_scout_web/templates/transaction_log/_logs.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/transaction_log/_logs.html.eex
@@ -20,7 +20,7 @@
     <dt class="col-lg-2"> <%= gettext "Address" %> </dt>
     <dd class="col-lg-10">
       <h3 class="logs-hash">
-        <% name = implementation_name(@log.address) || primary_name(@log.address)%>
+        <% name = Implementation.name(@log.address) || primary_name(@log.address)%>
         <%= link(
             (if name, do: name <> " | "<> to_string(@log.address), else: @log.address),
             to: address_path(@conn, :show, @log.address),
