--- a/apps/block_scout_web/lib/block_scout_web/templates/smart_contract/_function_response.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/smart_contract/_function_response.html.eex
@@ -4,8 +4,8 @@
 
 </pre>
 <%= case @outputs do %>
-    <% {:error, %{code: code, message: message, data: data}} -> %>
-        <% revert_reason = Chain.format_revert_reason_message(data) %>
+    <% {:error, %{code: code, message: message, data: _data} = error} -> %>
+        <% revert_reason = Chain.parse_revert_reason_from_error(error) %>
         <%= case decode_revert_reason(@smart_contract_address, revert_reason) do %>
             <% {:ok, _identifier, text, mapping} -> %>
                 <pre><%= raw(values_with_type(text, :error, nil)) %></pre>
