--- a/apps/block_scout_web/lib/block_scout_web/templates/smart_contract/_function_response.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/smart_contract/_function_response.html.eex
@@ -15,7 +15,7 @@
                     <% end %>
                 </div>
             <% {:error, _contract_verified, []} -> %>
-                <% decoded_revert_reason = decode_hex_revert_reason(revert_reason) %>
+                <% decoded_revert_reason = BlockScoutWeb.TransactionView.decode_hex_revert_reason_as_utf8(revert_reason) %>
                 <pre><span class="text-muted"><div style="padding-left: 20px"><%= "(#{code}) #{message} (#{if String.valid?(decoded_revert_reason), do: decoded_revert_reason, else: revert_reason})" %></div></span></pre>
             <% {:error, _contract_verified, candidates} -> %>
                 <% {:ok, _identifier, text, mapping} = Enum.at(candidates, 0) %>
@@ -26,7 +26,7 @@
                     <% end %>
                 </div>
             <% _ -> %>
-                <% decoded_revert_reason = decode_hex_revert_reason(revert_reason) %>
+                <% decoded_revert_reason = BlockScoutWeb.TransactionView.decode_hex_revert_reason_as_utf8(revert_reason) %>
                 <pre><span class="text-muted"><div style="padding-left: 20px"><%= "(#{code}) #{message} (#{if String.valid?(decoded_revert_reason), do: decoded_revert_reason, else: revert_reason})" %></div></span></pre>
         <% end %>
     <% {:error, %{code: code, message: message}} -> %>
