--- a/apps/block_scout_web/lib/block_scout_web/templates/transaction_raw_trace/_card_body.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/transaction_raw_trace/_card_body.html.eex
@@ -1,6 +1,6 @@
 <h2 class="card-title"><%= gettext "Raw Trace" %>
   <%= unless Enum.empty?(@internal_transactions) do %>
-    <% raw_trace_text = for {line, _} <- raw_traces_with_lines(@internal_transactions), do: line %>
+    <% raw_trace_text = for {line, _} <- raw_traces_with_lines(@raw_traces), do: line %>
     <%= render BlockScoutWeb.CommonComponentsView, "_btn_copy.html",
       id: "tx-raw-trace-input",
       additional_classes: ["tx-raw-input", "transaction-input"],
@@ -15,5 +15,5 @@
   <span><%= gettext "No trace entries found." %></span>
 </div>
 <% else %>
-<pre class="pre-scrollable line-numbers" data-activate-highlight><code class="json "><%= for {line, number} <- raw_traces_with_lines(@internal_transactions) do %><div data-line-number="<%= number %>"><%= line %></div><% end %></code></pre>
+<pre class="pre-scrollable line-numbers" data-activate-highlight><code class="json "><%= for {line, number} <- raw_traces_with_lines(@raw_traces) do %><div data-line-number="<%= number %>"><%= line %></div><% end %></code></pre>
 <% end %>
