--- a/apps/block_scout_web/lib/block_scout_web/templates/address/overview.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address/overview.html.eex
@@ -40,7 +40,7 @@
               <%= render BlockScoutWeb.CommonComponentsView, "_btn_qr_code.html" %>
             </span>
           </h1>
-          <h3 class="address-detail-hash-title mb-4 <%= if BlockScoutWeb.AddressView.contract?(@address) do %>contract-address<% end %>" data-test="address_detail_hash"><%= @address %></h3>
+          <h3 class="address-detail-hash-title mb-4 <%= if Address.smart_contract?(@address) do %>contract-address<% end %>" data-test="address_detail_hash"><%= @address %></h3>
           <!-- Verify in other explorers -->
           <!--
           <%# <%= render "_verify_other_explorers.html", hash: @address.hash, type: "address" %> %>
@@ -67,7 +67,7 @@
                 </dd>
               </dl>
             <% address_name -> %>
-              <%= if contract?(@address) do %>
+              <%= if Address.smart_contract?(@address) do %>
                 <dl class="row">
                   <dt class="col-sm-4 col-md-4 col-lg-3 text-muted">
                     <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
@@ -94,7 +94,7 @@
           <% end %>
           <!-- Creator -->
           <% from_address_hash = from_address_hash(@address) %>
-          <%= if contract?(@address) do %>
+          <%= if Address.smart_contract?(@address) do %>
             <dl class="row">
               <dt class="col-sm-4 col-md-4 col-lg-3 text-muted">
                 <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
