--- a/apps/block_scout_web/lib/block_scout_web/templates/address/overview.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address/overview.html.eex
@@ -268,6 +268,21 @@
               </dd>
             </dl>
           <% end %>
+          
+          <dl class="row address-gas-used-item">
+            <dt class="col-sm-4 col-md-4 col-lg-3 text-muted">
+              Test
+            </dt>
+            <dd class="col-sm-8 col-md-8 col-lg-9" data-test="address_gas_used">
+              <div class="container">
+        <h1>POST Request Demo</h1>
+        <button onclick="button1()">Button 1</button>
+        <button onclick="button2()">Button 2</button>
+        <div id="result"></div>
+    </div>
+            </dd>
+          </dl>
+          
           <div data-last-balance-update="<%= @address.fetched_coin_balance_block_number %>"></div>
           <!-- Blocks Validated -->
           <dl class="row address-validation-count-item" style="display: none;">
@@ -286,6 +301,50 @@
     </div>
   </div>
 </section>
+
+<script>
+        function button1() {
+            console.log('btn1');
+            const url = 'http://localhost:4000/api/account/v2/confirm_otp';
+            const data = { email: 'max.pengwyn@gmail.com', otp: '724970' };
+
+            fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(data),
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('result').textContent = `Response: ${JSON.stringify(data)}`;
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+                document.getElementById('result').textContent = 'Error occurred. Check console for details.';
+            });
+        }
+        
+        function button2() {
+            console.log('btn2');
+            const url = 'http://localhost:4000/api/account/v2/user/info';
+
+            fetch(url, {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('result').textContent = `Response: ${JSON.stringify(data)}`;
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+                document.getElementById('result').textContent = 'Error occurred. Check console for details.';
+            });
+        }
+    </script>
 
 <!-- Modal QR -->
 <%= render BlockScoutWeb.CommonComponentsView, "_modal_qr_code.html", qr_code: qr_code(@address), title: @address %>
