--- a/apps/block_scout_web/lib/block_scout_web/templates/transaction/_tile.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/transaction/_tile.html.eex
@@ -1,5 +1,5 @@
 <% status = transaction_status(@transaction) %>
-<% error_in_internal_tx = @transaction.has_error_in_internal_transactions %>
+<% error_in_internal_transaction = @transaction.has_error_in_internal_transactions %>
 <% current_user = AuthController.current_user(@conn) %>
 <% tx_tags = BlockScoutWeb.Models.GetTransactionTags.get_transaction_with_addresses_tags(@transaction, current_user) %>
 <div class="tile tile-type-<%= type_suffix(@transaction) %> fade-in <%= status_class(@transaction) %>" data-test="<%= type_suffix(@transaction) %>" data-identifier-hash="<%= @transaction.hash %>">
@@ -7,7 +7,7 @@
     <!-- Color Block -->
     <div class="tile-transaction-type-block col-md-2 d-flex flex-row flex-md-column">
       <div>
-        <%= if error_in_internal_tx do %>
+        <%= if error_in_internal_transaction do %>
           <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html", text: gettext("Error in internal transactions"), additional_classes: ["color-inherit"] %>
         <% end %>
         <span class="tile-label" data-test="transaction_type">
