--- a/apps/block_scout_web/assets/css/theme/_poa_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_poa_variables.scss
@@ -1,6 +1,6 @@
 // general
 $primary: #5c34a2;
-$secondary: #87e1a9;
+$secondary: #66ff6b;
 $tertiary: #bf9cff;
 $additional-font: #fff;
 
@@ -14,7 +14,7 @@ $footer-item-disc-color: $secondary;
 // dashboard
 $dashboard-line-color-price: $tertiary; // price left border
 
-$dashboard-banner-chart-legend-label-color: #dcc8ff;
+$dashboard-banner-chart-legend-label-color: #7E7866;
 $dashboard-stats-item-label-color: $dashboard-banner-chart-legend-label-color;
 $dashboard-banner-chart-legend-value-color: #fff; // chart labels
 $dashboard-stats-item-value-color: #fff; // stat values
@@ -77,5 +77,5 @@ $api-text-monospace-color: $primary;
 
 // Dark theme
 $dark-primary: #9b62ff;
-$dark-secondary: #87e1a9;
+$dark-secondary: #66ff6b;
 $dark-primary-alternate: #7e50d0; 
