--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -8,10 +8,10 @@ $dashboard-line-color-price: lighten($dashboard-banner-gradient-end, 5%) !defaul
 $dashboard-line-color-price-dark-theme: lighten($dashboard-banner-gradient-end, 5%) !default;
 $dashboard-line-color-market: $secondary !default;
 $dashboard-line-color-market-dark-theme: $secondary !default;
-$dashboard-line-color-transactions: $warning !default;
-$dashboard-line-color-transactions-dark-theme: $warning !default;
-$dashboard-stats-item-label-color: #fff !default;
-$dashboard-stats-item-value-color: rgba(#fff, 0.8) !default;
+$dashboard-line-color-transactions: #66FF6B !default;
+$dashboard-line-color-transactions-dark-theme: #66FF6B !default;
+$dashboard-stats-item-label-color: #7e7866 !default;
+$dashboard-stats-item-value-color: rgba(#505050, 0.8) !default;
 $dashboard-banner-chart-legend-label-color: #fff !default;
 $dashboard-banner-chart-legend-value-color: $dashboard-stats-item-value-color !default;
 $dashboard-stats-item-border-color: $primary !default;
@@ -151,7 +151,7 @@ $dashboard-banner-chart-axis-font-color-alt: #333;
 
     &.tx-per-day {
       &::before {
-        background-color: $dashboard-line-color-transactions;
+        background-color: #66FF68;
       }
     }
   }
@@ -202,7 +202,12 @@ $dashboard-banner-chart-axis-font-color-alt: #333;
 .dashboard-banner-network-plain-container {
   align-items: center;
   align-self: flex-end;
-  background-color: $dashboard-banner-network-plain-container-background-color;
+  // background-color: $dashboard-banner-network-plain-container-background-color;
+  background-image: linear-gradient(
+    to right,
+    $dashboard-banner-network-plain-container-background-color-start,
+    $dashboard-banner-network-plain-container-background-color-end
+  );
   border-top-left-radius: 10px;
   display: flex;
   height: $dashboard-banner-network-plain-container-height;
